--- a/04-multi-agyw.Rmd
+++ b/04-multi-agyw.Rmd
@@ -32,6 +32,10 @@ Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are on
 The Global AIDS Strategy 2021-2026 proposed stratifying HIV prevention packages to AGYW based on local population-level HIV incidence and individual-level sexual risk behaviour.
 The idea is that prioritisation based on both of these factors is more efficient than on only or one the other.
 
+```{r risk-grid, out.width = "90%", echo=FALSE, fig.cap="Risk grid."}
+knitr::include_graphics("figures/extra/risk-grid.png")
+```
+
 Implementing the strategy requires estimates.
 
 ## Data
