--- a/docs/main.tex
+++ b/docs/main.tex
@@ -549,6 +549,15 @@ Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are on
 The Global AIDS Strategy 2021-2026 proposed stratifying HIV prevention packages to AGYW based on local population-level HIV incidence and individual-level sexual risk behaviour.
 The idea is that prioritisation based on both of these factors is more efficient than on only or one the other.
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.9\linewidth]{figures/extra/risk-grid} 
+
+}
+
+\caption{Risk grid.}\label{fig:risk-grid}
+\end{figure}
+
 Implementing the strategy requires estimates.
 
 \hypertarget{data}{%
